# terraviva-ecommerce-fullstack

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  compose.prod.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  keepalive.yml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DOCKER.md  ENVIRONMENT.md  ROADMAP.md
terraviva/backend/: .dockerignore  Dockerfile  conftest.py  docker-entrypoint.sh  pyproject.toml
terraviva/backend/apps/order/: exceptions.py  models.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
terraviva/backend/apps/order/gateways/: __init__.py  stripe.py
terraviva/backend/apps/order/migrations/: 0001_initial.py
terraviva/backend/apps/product/: factories.py  models.py  selectors.py  services.py  tests.py  urls.py  views.py
terraviva/backend/apps/product/migrations/: 0001_initial.py  0002_product.py  0003_product_image_url.py  0004_remove_image_url.py  0005_remove_image_url_field.py
terraviva/backend/config/: asgi.py  settings.py  settings_test.py  storage.py  urls.py  wsgi.py
terraviva/backend/requirements/: base.txt  dev.txt
terraviva/frontend/: .dockerignore  .gitignore  Dockerfile  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.js
terraviva/frontend/src/: App.vue  main.js
terraviva/frontend/src/components/: CartItem.vue  OrderSummary.vue  ProductBox.vue
terraviva/frontend/src/router/: index.js
terraviva/frontend/src/store/: index.js
terraviva/frontend/src/views/: Cart.vue  Category.vue  Checkout.vue  Home.vue  LogIn.vue  MyAccount.vue  Product.vue  Search.vue  SignUp.vue  Success.vue
terraviva_v/: index.html  package.json  vite.config.js
terraviva_v/src/: App.vue
terraviva_v/src/views/: Category.vue  Home.vue
