[project]
name = "terraviva-backend"
version = "0.5.0"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [".git", ".venv", "__pycache__", "migrations", "staticfiles", "media"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "DJ"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
addopts = ["-v", "--tb=short", "--strict-markers", "-ra"]
testpaths = ["apps"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["apps"]
branch = true
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
