[project]
name = "terraviva-backend"
version = "0.6.0"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "DJ"]
ignore = ["DJ001"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["apps"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
# Ignore Django ORM false positives
reportAttributeAccessIssue = false
reportOptionalSubscript = false
reportOptionalMemberAccess = false
reportArgumentType = false
reportAssignmentType = false
reportReturnType = false
reportIncompatibleMethodOverride = false
reportIndexIssue = false
reportCallIssue = false
