[project]
name = "terraviva-backend"
version = "0.6.0"
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 120
exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "DJ"]
ignore = ["DJ001"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings_test"
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["apps"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "def __repr__", "raise NotImplementedError"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
# Django auto-creates id field, stripe.error namespace
reportAttributeAccessIssue = false
# DRF serializer.validated_data type
reportArgumentType = false
# Django User model incomplete stubs
reportUnknownMemberType = false
reportUnknownArgumentType = false

[tool.mypy]
python_version = "3.13"
plugins = ["mypy_django_plugin.main"]
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings"
